crates/ink/tests/ui/contract/fail/trait-message-selector-mismatch.stderr
error[E0308]: mismatched types
  --> tests/ui/contract/fail/trait-message-selector-mismatch.rs:23:9
   |
23 |         fn message(&self) {}
   |         ^^^^^^^^^^^^^^^^^^^^ expected `1`, found `2`
   |
   = note: expected struct `TraitMessageSelector<1>`
              found struct `TraitMessageSelector<2>`
